fix(styles.scss): Fixing the width of body on mobile version.

--- a/public/style.scss
+++ b/public/style.scss
@@ -4,6 +4,10 @@
 
 body {
     background: $--background-dark;
+
+	@include BP(mobile) {
+		width: fit-content;
+	}
 }
 
 .header {
